exec(String) deprecated, use ProcessBuilder instead